@@ -41,6 +41,7 @@ type
       var Result: Integer);
     procedure RadioGroup1Click(Sender: TObject);
     procedure VST3StateChange(Sender: TBaseVirtualTree; Enter, Leave: TVirtualTreeStates);
+    procedure VST3FreeNode(Sender: TBaseVirtualTree; Node: PVirtualNode);
   private
     procedure WMStartEditing(var Message: TMessage); message WM_STARTEDITING;
   end;
@@ -338,5 +339,15 @@ begin
 end;
 
 //----------------------------------------------------------------------------------------------------------------------
+
+procedure TPropertiesForm.VST3FreeNode(Sender: TBaseVirtualTree;
+  Node: PVirtualNode);
+var
+  Data: PPropertyData;
+
+begin
+  Data := Sender.GetNodeData(Node);
+  Finalize(Data^);
+end;
 
 end.
