@@ -1,8 +1,8 @@
 object VisibilityForm: TVisibilityForm
   Left = 573
   Top = 362
-  Width = 752
-  Height = 529
+  ClientHeight = 490
+  ClientWidth = 736
   Color = clBtnFace
   Font.Charset = DEFAULT_CHARSET
   Font.Color = clWindowText
@@ -15,7 +15,7 @@ object VisibilityForm: TVisibilityForm
   OnShow = FormShow
   DesignSize = (
     736
-    491)
+    490)
   PixelsPerInch = 96
   TextHeight = 16
   object Label17: TLabel
@@ -4164,6 +4164,7 @@ object VisibilityForm: TVisibilityForm
       OnChange = VST2Change
       OnCollapsed = VSTCollapsedExpanded
       OnExpanded = VSTCollapsedExpanded
+      OnFreeNode = VST2FreeNode
       OnInitChildren = VST2InitChildren
       OnInitNode = VST1InitNode
       OnScroll = VST2Scroll
@@ -8217,6 +8218,7 @@ object VisibilityForm: TVisibilityForm
       OnChange = VST2Change
       OnCollapsed = VSTCollapsedExpanded
       OnExpanded = VSTCollapsedExpanded
+      OnFreeNode = VST3FreeNode
       OnInitChildren = VST2InitChildren
       OnInitNode = VST1InitNode
       OnScroll = VST3Scroll
@@ -8277,6 +8279,7 @@ object VisibilityForm: TVisibilityForm
     TabOrder = 0
     TreeOptions.AutoOptions = [toAutoDropExpand, toAutoScroll, toAutoScrollOnExpand, toAutoTristateTracking, toAutoHideButtons]
     TreeOptions.SelectionOptions = [toMultiSelect]
+    OnFreeNode = VST1FreeNode
     OnInitChildren = VST1InitChildren
     OnInitNode = VST1InitNode
     Columns = <>
